<resources>
	<string name="app_name">ZenControl™</string>
	<string name="drawer_open">Menu opened</string>
	<string name="drawer_close">Menu closed</string>
	<string name="action_settings">Settings</string>
	<string-array name="nav_drawer_items">
		<item>SystemUI Mods</item>
		<item>Dropdown Mods</item>
		<item>Framework and General</item>
		<item>Tweak and Mods</item>
		<item>Useful Apps</item>
		<item>Set Theme</item>
		<item>About</item>
	</string-array>
	<string name="dialog_color_picker">Color Picker</string>
	<string name="press_color_to_apply">Press on Color to apply</string>
	<string-array name="theme_items">
		<item>Dark theme</item>
		<item>Light theme</item>
	</string-array>
	<string name="missing_su">Your device is either not rooted or the app was denied root permissions.\n\nPlease check your root/su status and try again later.</string>
	<string name="exit">Exit App</string>
	<string name="gaining_root">Acquiring root access. Please wait...</string>
	<string name="missing_su_title">Could not get root access</string>
	<string-array name="backup_items">
		<item>Backup</item>
		<item>Restore</item>
	</string-array>
	<string name="confirm_restore">Restore settings?</string>
	<string name="backup_dialog_title">Backup Settings</string>
	<string name="confirm_backup">Sure to Backup?</string>
	<string name="restore_next_boot">Restore On Next Boot</string>
	<string name="later">Later</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="reboot">Reboot devices?</string>
	<string name="reboot_hot">Fast Reboot devices?</string>
	<string name="reboot_reco">Reboot Recovery?</string>
	<string name="reboot_bl">Reboot Bootloader?</string>
	<string name="reboot_ui">Kill SystemUI?</string>
	<string name="show">Show</string>
	<string name="hide">Hide</string>
	<string name="enable">Enable</string>
	<string name="disable">Disable</string>
	<string name="lc_please_wait">Please wait&#8230;</string>
	<string name="dont_show">"Don't show"</string>
	<string name="right">Right</string>
	<string name="left">Left</string>
	<string name="center">Center</string>
	<string name="imgpick_dialog_title">Pick image using</string>
	<string name="imgpick_choose_error">Error while choosing image</string>
	<string name="imgpick_crop_error">Error while cropping image</string>
	<string name="statusbar_clock_title">Clock</string>
	<string name="statusbar_clock_summary">Statusbar Clock Options</string>
	<string name="statusbar_clock_style_title">Clock Style</string>
	<string name="statusbar_clock_style_summary">Choose centre,right or none</string>
	<string name="statusbar_clock_ampm_title">AM/PM style</string>
	<string name="statusbar_clock_ampm_summary">Add AM or PM to statusbar clock</string>
	<string name="statusbar_clock_type_title">Date Type</string>
	<string name="statusbar_clock_type_summary">Abbreviated day of the week in statusbar</string>
	<string name="statusbar_clock_date_style_title">Date Style</string>
	<string name="statusbar_clock_date_format_title">Date Format</string>
	<string name="statusbar_clock_date_custom_title">Date Custom Format</string>
	<string name="statusbar_clock_date_custom_summary">Edit Date Format</string>
	<string name="statusbar_clock_date_formatted_title">Enter Date Format</string>
	<string name="statusbar_clock_second_title">Clock Seconds</string>
	<string name="statusbar_clock_second_summary">Choose if show seconds</string>
	<string name="statusbar_clock_color_title">Clock Color</string>
	<string name="statusbar_clock_font_title">Clock Font</string>
	<string name="statusbar_clock_font_type_summary">Choose clock font type</string>
	<string name="statusbar_clock_size_title">Clock Size</string>
	<string name="network_traffic_title">Network traffic</string>
	<string name="network_traffic_summary">Enable various network traffic options in statusbar</string>
	<string name="network_traffic_single_title">Network speed</string>
	<string name="network_traffic_single_summary">Show network speed in statusbar</string>
	<string name="network_speed_color_title">Network speed color</string>
	<string name="network_traffic_separate_title">Network traffic</string>
	<string name="show_network_traffic_state">Status bar traffic monitor</string>
	<string name="network_traffic_color_style">Color style</string>
	<string name="show_network_traffic_unit">Display unit</string>
	<string name="show_network_traffic_frequency">Update interval</string>
	<string name="network_traffic_autohide">Auto hide</string>
	<string name="network_traffic_autohide_summary">Hide the traffic monitor when there is no activity</string>
	<string name="network_traffic_autohide_threshold">Inactivity threshold</string>
	<string name="network_traffic_color_reset">Reset color</string>
	<string name="network_traffic_color_reset_message">Reset network traffic color to default?</string>
	<string name="show_network_traffic_1000">1000 ms</string>
	<string name="show_network_traffic_1500">1500 ms</string>
	<string name="show_network_traffic_2000">2000 ms</string>
	<string name="dropdown_layout_style_title">Dropdown Layout Style</string>
	<string name="dropdown_header_title">Dropdown Header</string>
	<string name="dropdown_header_summary">Customize Dropdown Header</string>
	<string name="dropdown_clock_color_title">Header Clock Color</string>
	<string name="dropdown_date_color_title">Header Date Color</string>
	<string name="notif_header_bg_wall_title">Pick Header Image</string>
	<string name="notif_header_bg_wall_summary">Set image background for dropdown header</string>
	<string name="notif_header_bg_blur_title">Blur background</string>
	<string name="notif_header_bg_wall_alpha">Header BG Image Alpha</string>
	<string name="omni_header_style_title">Select OMNI style images</string>
	<string name="dropdown_bg_title">Dropdown BG</string>
	<string name="dropdown_bg_summary">Customize Dropdown BG</string>
	<string name="notif_bg_wall_title">Pick Dropdown Image</string>
	<string name="notif_bg_wall_summary">Set notification panel background</string>
	<string name="notif_bg_blur_title">Blur background</string>
	<string name="notif_bg_wall_alpha">Dropdown BG Image Alpha</string>
	<string name="bg_type_title">Background Type</string>
	<string name="bg_color_title">Background Color</string>
	<string name="adv_gradient_toggle_title">Adv Gradient Background</string>
	<string name="adv_gradient_title">Adv Gradient Background</string>
	<string name="adv_gradient_summary">Customize Gradient Background</string>
	<string name="gradient_orientation_title">Gradient Orientation</string>
	<string name="gradient_type_title">Gradient Type</string>
	<string name="gradient_3color_toggle_title">Enable 3 Color Gradient</string>
	<string name="gradient_color1_title">Gradient Colors 1</string>
	<string name="gradient_color2_title">Gradient Colors 2</string>
	<string name="gradient_color3_title">Gradient Colors 3</string>
	<string name="gradient_radius_title">Gradient Radius</string>
	<string name="gradient_corner_radius_title">Gradient Corner Radius</string>
	<string name="carrier_label_title">Carrier Label</string>
	<string name="carrier_label_summary">Carrier Label Options</string>
	<string name="carrier_label_align_title">Carrier Label Alignment</string>
	<string name="carrier_label_toggle_title">Use Custom Carrier Text</string>
	<string name="carrier_label_text_title">Set Custom Carrier Text</string>
	<string name="carrier_label_text_color_title">Carrier Text Color</string>
	<string name="carrier_label_text_size_title">Carrier Text Size</string>
	<string name="notification_text_color_title">Notification Text Color</string>
	<string name="quicksetting_button_color_title">Quick Settings Button Color</string>
	<string name="quicksetting_divider_color_title">Quick Settings Divider Color</string>
	<string name="tweak_busybox_title">Install BusyBox &amp; SQLite3</string>
	<string name="tweak_busybox_summary">Install BusyBox &amp; SQLite3 binary into system, restart phone manually for apply changes.</string>
	<string name="tweak_adblock_install_title">Install ADBlock Host</string>
	<string name="tweak_adblock_install_summary">Install Host for blocking Ads, restart phone manually for apply changes.</string>
	<string name="tweak_adblock_uninstall_title">Uninstall ADBlock Host</string>
	<string name="tweak_adblock_uninstall_summary">Revert to stock host file, restart phone manually for apply changes.</string>
	<string name="tweak_sd_write_title">Enable Ext-SD Write</string>
	<string name="tweak_sd_write_summary">Enable Ext-SD Write for Zen 4S FW 5.4.2, restart phone manually for apply changes.</string>
	<string name="tweak_sd_write_uninstall_title">Disable Ext-SD Write</string>
	<string name="tweak_sd_write_uninstall_summary">Revert to Default, restart phone manually for apply changes.</string>
	<string name="tweak_zen_features_title">Install Zen Features</string>
	<string name="tweak_zen_features_summary">Enable Glove Mode, Double Tap to Sleep and One Hand Mode, restart phone manually for apply changes.</string>
	<string name="tweak_zen_features_uninstall_title">Uninstall Zen Features</string>
	<string name="tweak_zen_features_uninstall_summary">Revert to Default, restart phone manually for apply changes.</string>
	<string name="enter_cwm_title">Enter CWM Temporary</string>
	<string name="enter_cwm_summary">Reboot to CWM Temporary, this script will automatically restart the phone.</string>
	<string name="tweak_soft_reset_title">Soft Reset</string>
	<string name="tweak_soft_reset_summary">"Reset user settings to default value,
this is won't delete user data, like apps, etc.
This script will automatically restart the phone."</string>
	<string name="tweak_block_bbmads_title">Block BBM Ads</string>
	<string name="tweak_block_bbmads_summary">Block Ads on BBM, this script will automatically restart the phone.</string>
	<string name="listview_title">Mokee Listview Animations</string>
	<string name="listview_animation_title">Listview animation</string>
	<string name="listview_interpolator_title">Listview interpolator</string>
	<string name="power_menu_title">Advanced Power Menu</string>
	<string name="power_menu_power_title">Power</string>
	<string name="power_menu_restart_title">Restart</string>
	<string name="power_menu_airplane_title">Airplane</string>
	<string name="power_menu_settings_title">Settings</string>
	<string name="power_menu_screenshot_title">Screenshot</string>
	<string name="power_menu_flashlight_title">Flashlight</string>
	<string name="power_menu_sound_title">Sound</string>
	<string name="about_DEV_summary">MOD Developer</string>
	<string name="donate">Donate</string>
	<string name="donate_summary">Click Here to Support My Work By Donating</string>
	<string name="about_facebook">Facebook</string>
	<string name="about_facebook_summary">Add Me on Facebook</string>
	<string name="about_twitter">Twitter</string>
	<string name="about_twitter_summary">Follow Me on Twitter</string>
	<string name="about_gplus">Google+</string>
	<string name="about_gplus_summary">Follow Me on Google+</string>
	<string name="about_xda">XDA</string>
	<string name="about_xda_summary">Add Me on XDA</string>
	<string name="about_github">Github</string>
	<string name="about_github_summary">Follow Me on Github</string>
	<string name="gesture_anywhere_title"><b><i>Gesture Anywhere</i></b></string>
	<string name="gesture_anywhere_enabled_title"><b><i>Gesture Anywhere</i></b></string>
	<string name="gesture_anywhere_enabled_summary">Enable the Gesture Anywhere feature</string>
	<string name="gesture_anywhere_position_title">Location</string>
	<string name="gesture_anywhere_gestures_title">Gestures</string>
	<string name="gesture_anywhere_gestures_summary">Add, remove, and edit gestures</string>
	<string name="trigger_category">Trigger</string>
	<string name="trigger_width_title">Trigger Width</string>
	<string name="trigger_top_title">Trigger Top</string>
	<string name="trigger_bottom_title">Trigger Bottom</string>
</resources>